# huffman-compression

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: test_input_6.txt  test_input_7.txt
experiments/: measure.py  results_all_multi_run.csv  results_all_multi_run.ods
experiments/input/code/: code_1000kb.txt  code_100kb.txt  code_250kb.txt  code_500kb.txt  code_50kb.txt
experiments/input/text/: war_and_peace_1000kb.txt  war_and_peace_100kb.txt  war_and_peace_250kb.txt  war_and_peace_2800kb.txt  war_and_peace_500kb.txt  war_and_peace_50kb.txt
src/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  Compressor.cpp  Compressor.h  Decompressor.cpp  Decompressor.h  HuffmanTree.cpp  HuffmanTree.h  Node.h  main.cpp
tests/: test_bit_io.cpp  test_huffman.cpp  test_integration.cpp
